# todoist-mcp-server

./: Dockerfile  LICENSE  README.md  main.py  pyproject.toml  smithery.yaml
src/: __init__.py  api.py  comments.py  main.py  projects.py  sections.py  tasks.py  tasks_sync.py  utils.py
